# morning-byte

./: .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml
.github/workflows/: daily-digest.yml
src/morning_byte/: __init__.py  config.py  content.py  main.py  models.py
src/morning_byte/delivery/: __init__.py  email.py  local.py
src/morning_byte/epub/: __init__.py  generator.py  styles.py
src/morning_byte/sources/: __init__.py  base.py  devto.py  hackernews.py  lobsters.py  reddit.py  rss.py
